<resources>
    <string name="app_name">Belajar</string>
    <string name="keluar">Keluar</string>
    <string name="masuk">Masuk</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="nomor_induk_siswa">Nomor Induk Siswa</string>
    <string name="selected_date">Hari dan Tanggal</string>
    <string name="pilih_tanggal_dan_hari">Pilih tanggal dan hari</string>
    <string name="pilih_tanggal">Pilih</string>
    <string name="pilih_jam">Pilih jam</string>
    <string name="selected_time">Jam</string>
    <string name="pick_time">Pilih</string>
    <string name="mode_24_hours">Mode 24 Jam</string>
    <string name="perihal">Perihal</string>
    <string name="kirim">Kirim</string>
    <string name="pilih_gambar">Pilih Gambar</string>
    <string name="nama_gambar">Nama Gambar</string>
    <string name="pilih_upload_gambar">Pilih</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="email">Email</string>
    <string name="nomor_induk">Nomor Induk</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="alamat">Alamat</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="nomor_hp_bk">Nomor HP BK</string>
    <string name="kata_sandi_baru">Kata Sandi Baru</string>
    <string name="ulang_kata_sandi_baru">Ulang Kata Sandi Baru</string>
    <string name="simpan">Simpan</string>
    <string name="ubah_gambar">Ubah Gambar</string>
    <string name="ubah_nama">Ubah Nama</string>
    <string name="ubah_email">Ubah Email</string>
    <string name="ubah_nomor_hp">Ubah Nomor HP</string>
    <string name="ubah_alamat">Ubah Alamat</string>

</resources>
