<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ubah_profil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a_citra.belajar.UbahProfil">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/pp"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp" />

    <Button
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/ubah_gambar"
        android:id="@+id/ubah_gambar"
        android:background="@color/colorButton"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="38dp"
        android:layout_alignBottom="@+id/profile_image"
        android:layout_toRightOf="@+id/profile_image"
        android:layout_toEndOf="@+id/profile_image" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ubah_email"
        android:ems="20"
        android:hint="@string/ubah_email"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/ubah_nama"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ubah_nomor_hp"
        android:ems="20"
        android:hint="@string/ubah_nomor_hp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/ubah_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ubah_alamat"
        android:ems="20"
        android:hint="@string/ubah_alamat"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/ubah_nomor_hp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ubah_nama"
        android:ems="20"
        android:hint="@string/ubah_nama"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/profile_image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/simpan"
        android:text="@string/simpan"
        android:background="@color/colorButton"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/ubah_alamat"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
