<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ubah_kata_sandi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a_citra.belajar.UbahKataSandi">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kata_sandi_baru"
        android:hint="@string/kata_sandi_baru"
        android:ems="20"
        android:layout_below="@+id/ulang_kata_sandi_baru"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ulang_kata_sandi_baru"
        android:hint="@string/ulang_kata_sandi_baru"
        android:ems="20"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/simpan"
        android:text="@string/simpan"
        android:background="@color/colorButton"
        android:layout_below="@+id/kata_sandi_baru"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp" />


</RelativeLayout>
